Changed pie chart colours to site colours

--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -265,10 +265,9 @@
                 label: 'Votes',
                 data: <%- JSON.stringify(votes) %>,
                 backgroundColor: [
-                  '#007bff', '#dc3545', '#ffc107', '#28a745',
-                  '#6610f2', '#fd7e14', '#6f42c1', '#20c997'
+                  '#003366', '#f36f21', '#800000', '#fcd34d'
                 ],
-                borderColor: '#ffffff',
+                borderColor: '#000000',
                 borderWidth: 1
               }]
             },
@@ -295,5 +294,4 @@
 </script>
 
 </body>
-
 </html>
