saved polls are persistent across all pages, and added more to the readme file

--- a/views/polls.ejs
+++ b/views/polls.ejs
@@ -93,8 +93,14 @@
         }
       </script>
 
+       <script id="saved-polls-data" type="application/json">
+  <%= JSON.stringify(savedPollIds) %>
+      </script>
+
     <!-- The javascript code related to save functionality in this page -->
     <script src="polls.js"></script>
+   
+
 </body>
 
 </html>
