Added frontend for sorting by most favourited on pollStats.ejs

--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -108,6 +108,13 @@
             style="background-color: #6f42c1; border: none; <%= (sort === 'views') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
             Most Viewed
           </a>
+
+          <!-- Most Favourited -->
+          <a href="/pollstats?sort=saves" class="btn text-white"
+            style="background-color: #14532d; <%= (sort === 'saves') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
+            Most Favourited
+          </a>
+
         </div>
 
         <hr />
@@ -315,4 +322,5 @@
       </script>
 
 </body>
+
 </html>
