--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -115,6 +115,12 @@
             Most Favourited
           </a>
 
+          <!-- Most Commented -->
+          <a href="/pollstats?sort=comments" class="btn text-white"
+            style="background-color: #9b023f; <%= (sort === 'comments') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
+            Most Commented
+          </a>
+
         </div>
 
         <hr />
