Minor tweaks to button colours on pollStats.ejs

--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -117,7 +117,7 @@
 
           <!-- Most Commented -->
           <a href="/pollstats?sort=comments" class="btn text-white"
-            style="background-color: #9b023f; <%= (sort === 'comments') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
+            style="background-color: #8b0166; <%= (sort === 'comments') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
             Most Commented
           </a>
 
