Added secondary alphabetical sort for the new stats-based sort functionality and minor clean up efforts

--- a/views/pollStats.ejs
+++ b/views/pollStats.ejs
@@ -105,13 +105,13 @@
 
           <!-- Most Viewed -->
           <a href="/pollstats?sort=views" class="btn text-white"
-            style="background-color: #6f42c1; border: none; <%= (sort === 'views') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
+            style="background-color: #6139ab; border: none; <%= (sort === 'views') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
             Most Viewed
           </a>
 
           <!-- Most Favourited -->
           <a href="/pollstats?sort=saves" class="btn text-white"
-            style="background-color: #14532d; <%= (sort === 'saves') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
+            style="background-color: #787603; <%= (sort === 'saves') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
             Most Favourited
           </a>
 
