MODULARIZATION: broke up the 1438-line app.js file into several route files, three middleware files, two config files, renamed a few files for consistency, migrated saving features (profile.js and polls.js in route) to public/js folder

--- a/views/polls.ejs
+++ b/views/polls.ejs
@@ -98,9 +98,7 @@
       </script>
 
     <!-- The javascript code related to save functionality in this page -->
-    <script src="polls.js"></script>
+    <script src="/js/polls.js"></script>
    
-
 </body>
-
 </html>
