Fixed position of landing page button on about us page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -16,7 +16,7 @@
 
 <body>
   <!-- Back to Landing Button -->
-  <div style="position: absolute; top: 10rem; left: -.5rem; z-index: 1000;">
+  <div style="position: absolute; top: -5rem; right: 6rem; z-index: 1000;">
     <div class="container">
       <div class="row">
         <div class="col-12 text-start">
