--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -96,11 +96,11 @@
                             <p class="mb-1 text-muted">Answer Options:</p>
                             <ul>
                               <% poll.choices.forEach(choice=> { %>
-                                <li>
-                                  <%= choice.text %> - <strong>
-                                      <%= choice.votes %>
-                                    </strong> votes
-                                </li>
+                                <li><span class="text-muted">
+                                    <%= choice.text %> - <strong>
+                                        <%= choice.votes %>
+                                      </strong> votes
+                                  </span></li>
                                 <% }); %>
                             </ul>
 
@@ -113,8 +113,8 @@
                                 <%= poll.endDate ? new Date(poll.endDate).toLocaleDateString() : 'Not Set' %>
                               </strong></p>
 
-                              <hr />
-                              
+                            <hr />
+
                             <!-- Tags Section -->
                             <p class="mt-3 text-muted mb-1">Tags:</p>
                             <div class="mb-2">
@@ -283,4 +283,5 @@
       <script src="/js/pastPolls.js"></script>
 
 </body>
+
 </html>
