Fixed pastPolls.ejs results plural handling not working

--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -99,7 +99,8 @@
                                 <li><span class="text-muted">
                                     <%= choice.text %> - <strong>
                                         <%= choice.votes %>
-                                      </strong> votes
+                                      </strong>
+                                      <%= choice.votes===1 ? 'vote' : 'votes' %>
                                   </span></li>
                                 <% }); %>
                             </ul>
