--- a/views/pastPolls.ejs
+++ b/views/pastPolls.ejs
@@ -269,7 +269,7 @@
 
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-outline-secondary" id="resetEditBtn">Reset</button>
+              <button type="button" class="btn btn-danger" onclick="resetEditPollForm()">Reset</button>
               <button type="submit" class="btn btn-site-orange text-white">Save Changes</button>
             </div>
           </div>
